# Battlefy-Toolkit

./: README.md  requirements.txt  setup.cfg  setup.py
caching/: fileio.py
downloaders/: download_utils.py
endpoints/: addresses.py
objects/: TournamentInfo.py  TournamentStage.py  TournamentTeam.py
resolvers/: DiscordIdResolver.py
src/battlefy_toolkit/caching/: TournamentLog.py
src/battlefy_toolkit/downloaders/: org_downloader.py  tourney_downloader.py
src/battlefy_toolkit/objects/: Tournament.py  TournamentInfo.py  TournamentStage.py
src/battlefy_toolkit/org_lists/: splatoon_orgs.py
src/caching/: TournamentLog.py
src/downloaders/: org_downloader.py  tourney_downloader.py
src/objects/: Standings.py  Tournament.py
src/org_lists/: splatoon_orgs.py
utils/: misc.py
