[metadata]
name = battlefy_toolkit-Slate
version = 1.2.0
author = IPL
author_email = security@iplabs.ink
description = IPL Battlefy Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IPLSplatoon/Battlefy-Toolkit
project_urls =
    Bug Tracker = https://github.com/IPLSplatoon/Battlefy-Toolkit/issues
    Home = https://iplabs.ink/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
